# planeturem-framework

./: CMakeLists.txt  README.md
assets/: default.frag  default.vert  font.frag
include/: Color.hpp  DrawData.hpp  Engine.hpp  Font.hpp  Framebuffer.hpp  Image.hpp  Rect.hpp  RenderTarget.hpp  Shader.hpp  SpriteBatch.hpp  TextDrawData.hpp  Texture.hpp  Vector.hpp  Vertex.hpp  VertexArray.hpp  Window.hpp  gl.h
include/Audio/: Sound.hpp
include/Graphics/: BlendMode.hpp  Color.hpp  DrawData.hpp  Font.hpp  Framebuffer.hpp  Image.hpp  PrimitiveMode.hpp  RenderTarget.hpp  Shader.hpp  SpriteBatch.hpp  TextDrawData.hpp  Texture.hpp  Vertex.hpp  VertexArray.hpp
include/extlib/: gl.h  stb_image.h
src/: Engine.cpp  Font.cpp  Framebuffer.cpp  Image.cpp  RenderTarget.cpp  Shader.cpp  SpriteBatch.cpp  Texture.cpp  VertexArray.cpp  Window.cpp  main.cpp
src/Audio/: Sound.cpp
src/Graphics/: Font.cpp  Framebuffer.cpp  Image.cpp  RenderTarget.cpp  Shader.cpp  SpriteBatch.cpp  Texture.cpp  VertexArray.cpp
src/extlib/: gl.c  miniaudio.c  miniaudio_libvorbis.c
